--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -18,7 +18,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/">Главное</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Регестрация</a></li>
-            <li class="nav-item"><a class="nav-link" href="/">Авторизация</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Авторизация</a></li>
           </ul>
         </div>
       </header>
