пороботал над дизайном

--- a/main/pugs/base.pug
+++ b/main/pugs/base.pug
@@ -9,9 +9,11 @@ html(lang="en")
     title {% block title %}{% endblock title %}
     link(rel="stylesheet", href="/static/css/style.css")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous")
+    link(rel="preconnect" href="https://fonts.gstatic.com")
+    link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet")
   body
     div
-      header(class="navbar navbar-expand-lg navbar-dark bg-dark mb-3")
+      header(class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: #000 !important")
         div.container-fluid
           a.navbar-brand.mb-0.h1 FORUM
           button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headerMenu" aria-controls="headerMenu" aria-expanded="false" aria-label="Toggle navigation")
@@ -35,5 +37,8 @@ html(lang="en")
       main
         | {% block main %}
         | {% endblock main %}
+      footer.mx-auto
+        div.mx-auto
+          p &#169; FORUM 2021
     
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous")
+  script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous")
