--- a/main/pugs/section.pug
+++ b/main/pugs/section.pug
@@ -3,15 +3,14 @@
 | {% block title %}Секция {{section.title}}{% endblock title %}
 
 | {% block main %}
-section.section
+section.section.mx-auto
   h1 {{section.title}}
-  hr
   div
     | {% if themes %}
     |  {% for t in themes %}
     div.theme.px-2
       h2
-        a(href="{% url 'main:theme' t.pk %}" class="text-dark text-decoration-none") {{t.title}}
+        a(href="{% url 'main:theme' t.pk %}" class="text-light text-decoration-none") {{t.title}}
     |  {% endfor %}
     | {% else %}
     h1.display-5 тут пусто
