--- a/main/static/sass/style.sass
+++ b/main/static/sass/style.sass
@@ -1,9 +1,89 @@
+body
+  font-family: 'Noto Sans JP', sans-serif !important
+  header
+    box-shadow: 0 0 3px 6px black
+  main
+    > section
+      padding-top: 10px
+      box-shadow: 0 0 4px 12px black
+      min-height: 900px
+      max-width: 700px
+      margin-bottom: 0
+  footer
+    background-color: black
+    padding: 10px
+    box-shadow: 0 0 4px 12px black
+    max-width: 700px
+    div 
+      width: 100%
+      p
+        width: 100%
+        text-align: center
+        font-weight: 100
+        color: #aaa !important
+
 section.register
+  box-shadow: none
+  margin-top: 10px
   form
     width: 70%
     max-width: 700px
 
 section.login
+  box-shadow: none
+  margin-top: 10px
   form
     width: 70%
     max-width: 700px
+
+section.main
+  background: black
+  padding-top: 5px
+  padding-bottom: 20px
+  h1
+    color: white !important
+    margin-left: 10px
+  .section:nth-child(odd)
+    background: #121213
+  .section:nth-child(even)
+    background: #0d0e0f
+  .section:hover
+    background: white
+    h2
+      a
+        color: black !important
+  .section
+    transition: .2s
+    padding: 7px 5px 7px 15px
+    box-shadow: inset 0 0 3px 3px rgba(0, 0, 0, 0.5)
+    h2
+      a
+        color: #ccc !important
+        font-weight: 300
+
+section.section
+  background: black
+  padding-top: 5px
+  padding-bottom: 20px
+  min-height: 600px
+  max-width: 700px
+  h1
+    color: white !important
+    margin-left: 10px
+  .theme:nth-child(odd)
+    background: #121213
+  .theme:nth-child(even)
+    background: #0d0e0f
+  .theme:hover
+    background: white
+    h2
+      a
+        color: black !important
+  .theme
+    transition: .2s
+    padding: 7px 5px 7px 15px
+    box-shadow: inset 0 0 3px 3px rgba(0, 0, 0, 0.5)
+    h2
+      a
+        color: #ddd !important
+        font-weight: 300
