--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -2,12 +2,12 @@
 {% extends 'base.html' %}
 {% block title %}Главное{% endblock title %}
 {% block main %}
-<section class="main">
-  {% if sections %}
+<section class="main mx-auto">
+  <h1>Секции</h1>{% if sections %}
    {% for s in sections %}
   <div class="section">
-    <h1> <a class="text-dark text-decoration-none" href="{% url 'main:section' s.pk %}">{{s.title}}</a></h1>
+    <h2><a class="text-dark text-decoration-none" href="{% url 'main:section' s.pk %}">{{s.title}}</a></h2>
   </div> {% endfor %}
   {% else %}
-  <h2 class="display-5">Тут пусто :(</h2>{% endif %}
+  <h1 class="display-5">Тут пусто :(</h1>{% endif %}
 </section>{% endblock main %}
