--- a/main/static/sass/style.sass
+++ b/main/static/sass/style.sass
@@ -87,3 +87,29 @@ section.section
       a
         color: #ddd !important
         font-weight: 300
+
+section.theme
+  background: black
+  color: white !important
+  .messages
+    margin-bottom: 20px !important
+    .msg
+      border-block-start: 1px solid white !important
+      padding: 7px 5px 0 5px
+      border-block-end: 1px solid white !important
+  
+  .addMsg
+    textarea
+      background: black
+      color: white
+    
+    button[type="submit"]
+      padding: 6px 6px 7px 6px
+      background: black
+      color: white
+      border: 1px solid white
+      transition: .2s
+
+    button[type="submit"]:hover
+      border-color: #999
+      color: #999
