--- a/main/pugs/base.pug
+++ b/main/pugs/base.pug
@@ -13,7 +13,7 @@ html(lang="en")
     link(href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet")
   body
     div
-      header(class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: #000 !important")
+      header(class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: #000 !important" id="header")
         div.container-fluid
           a.navbar-brand.mb-0.h1 FORUM
           button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headerMenu" aria-controls="headerMenu" aria-expanded="false" aria-label="Toggle navigation")
