--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div>
-      <header class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: #000 !important">
+      <header class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: #000 !important" id="header">
         <div class="container-fluid"><a class="navbar-brand mb-0 h1">FORUM</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headerMenu" aria-controls="headerMenu" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         </div>
