--- a/main/static/sass/style.sass
+++ b/main/static/sass/style.sass
@@ -79,6 +79,15 @@ section.section
     h2
       a
         color: black !important
+  .addTheme
+    .modal
+      .modal-content
+        background: #222
+        padding: 5px
+        color: white
+        input
+          background: black
+          color: white
   .theme
     transition: .2s
     padding: 7px 5px 7px 15px
